--- a/index.html
+++ b/index.html
@@ -77,20 +77,20 @@ body {
 <body>
 
 <div class="header">
-  <h2>Blog Name</h2>
+  <h2>Mirthful Musings</h2>
 </div>
 
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
-      <h2>TITLE HEADING</h2>
+      <h2>IT / OT Convergence</h2>
       <h5>Title description, Dec 7, 2017</h5>
       <div class="fakeimg" style="height:200px;">Image</div>
       <p>Some text..</p>
       <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
     </div>
     <div class="card">
-      <h2>TITLE HEADING</h2>
+      <h2>IT and OT Security</h2>
       <h5>Title description, Sep 2, 2017</h5>
       <div class="fakeimg" style="height:200px;">Image</div>
       <p>Some text..</p>
@@ -101,7 +101,7 @@ body {
     <div class="card">
       <h2>About Me</h2>
       <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+      <p> exicted to see how this all turns out</p>.</p>
     </div>
     <div class="card">
       <h3>Popular Post</h3>
